# sitemap_generator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
generator/: drawing_graph.py  sitemap_generator.py  sitemap_generator_async.py  xml_creater.py
ready_sitemaps/: sitemap_privetmir.ru.xml  sitemap_privetmir.ru_async.xml  sitemap_ya.ru.xml
