[tool.poetry]
name = "sitemap_generator"
version = "0.1.0"
description = ""
authors = ["Dmitry Konstantinov <konstdimasik@gmail.com>"]
packages = [
  { include = "generator" },
]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.27.1"
prompt = "^0.4.1"
lxml = "^4.8.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generator = "generator.sitemap_generator:main"
