[tool.poetry]
name = "sitemap_generator"
version = "0.1.0"
description = ""
authors = ["Dmitry Konstantinov <konstdimasik@gmail.com>"]
packages = [
  { include = "generator" },
]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.27.1"
prompt = "^0.4.1"
lxml = "^4.8.0"
aiohttp = "^3.8.1"
networkx = "^2.8"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generator = "generator.sitemap_generator:main"
generator_async = "generator.sitemap_generator_async:main"
